# AstaStar

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
AstaStar/: CMakeLists.txt
AstaStar/AstaStar/: AstaStar.h  AstaStar.hpp
AstaStar/AstaStar/Core/: Application.hpp  EntryPoint.hpp  Logger.hpp
AstaStar/AstaStar/Event/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
AstaStar/Header/: AstaStar.h  pch.hpp
AstaStar/Header/Core/: Application.hpp  EntryPoint.hpp  Logger.hpp
AstaStar/Header/Event/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
AstaStar/Header/Window/: Window.hpp
AstaStar/Header/Window/Windows/: Window.hpp
AstaStar/Source/: AstaStar.cpp
AstaStar/Source/Core/: Application.cpp  Logger.cpp
AstaStar/Source/Window/: Window.cpp
AstaStar/Source/Window/Windows/: Window.cpp
AstaStar/src/: AstaStar.cpp
AstaStar/src/Core/: Application.cpp  Logger.cpp
AstaStarEditor/: CMakeLists.txt
AstaStarEditor/Header/: AstaStarEditor.h
AstaStarEditor/Source/: AstaStarEditor.cpp
AstaStarEditor/src/: AstaStarEditor.cpp
AstaStarHub/: CMakeLists.txt
AstaStarHub/Source/: AstaStarHub.cpp
triplet/: x64-windows.cmake
